Fix color and spacing

--- a/css/styles.css
+++ b/css/styles.css
@@ -66,10 +66,11 @@ body {
   pointer-events: none;
 }
 
-.login-error {
+.login-box .login-error {
   color: #e57373;
   font-size: 1rem;
   margin-top: 1.5rem;
+  margin-bottom: 0;
 }
 
 @media (min-width: 480px) {
